fix: Missing alt on Microsoft

--- a/docs/authentication/social-connections/microsoft.mdx
+++ b/docs/authentication/social-connections/microsoft.mdx
@@ -33,11 +33,11 @@ After creating a Microsoft Azure account, you will need to create a new App Regi
 
 To do so, navigate to the list of applications and click on New Registration.
 
-![](/docs/images/authentication-providers/microsoft/68c5008e10816bba8c174236dd789ca9a4fdb53d-2270x818.png)
+![Accessing the "New registration" page](/docs/images/authentication-providers/microsoft/68c5008e10816bba8c174236dd789ca9a4fdb53d-2270x818.png)
 
 In the new application form, make sure you fill in the following fields:
 
-![](/docs/images/authentication-providers/microsoft/1a5dc8db362fc73ca1791d13fc6fb2b74f9f2b81-3360x1782.png)
+![Filling required fields](/docs/images/authentication-providers/microsoft/1a5dc8db362fc73ca1791d13fc6fb2b74f9f2b81-3360x1782.png)
 
 After creating a new app, you will be presented with the app information page.
 
@@ -45,7 +45,7 @@ The **Application (client) ID** visible on this page should be pasted into the *
 
 To generate a value, click on the **Client credentials** link:
 
-![](/docs/images/authentication-providers/microsoft/bf4870cd568b61e1109b098dde0ff64932e51bb9-1874x370.png)
+![Generating a new credential](/docs/images/authentication-providers/microsoft/bf4870cd568b61e1109b098dde0ff64932e51bb9-1874x370.png)
 
 Microsoft Azure supports 2 kinds of credentials:
 
@@ -60,7 +60,7 @@ To create a new client secret, click on the New client secret button as illustra
 
 You will be prompted to provide a name and lifetime for the new secret.
 
-![](/docs/images/authentication-providers/microsoft/08f6445903a233c89ad96be25de3293def891cb6-1172x854.png)
+![Adding a name and selecting expiration date](/docs/images/authentication-providers/microsoft/08f6445903a233c89ad96be25de3293def891cb6-1172x854.png)
 
 After confirming your choice, the new secret will be listed. This is the only time you will able to copy & paste it, so make sure you do so before navigating away. Also, take note of the lifetime of said secret because you will need to generate a new one before it expires.
 
@@ -70,7 +70,7 @@ Finally, you'll need to instruct your Microsoft Azure app to operate in OpenID  
 
 This can be done by navigating to the Authentication section and checking the option displayed below:
 
-![](/docs/images/authentication-providers/microsoft/8952eb0906ea95baa72026a2fb08edc8bfcd2d4a-3360x1782.png)
+![Turning on OpenID mode](/docs/images/authentication-providers/microsoft/8952eb0906ea95baa72026a2fb08edc8bfcd2d4a-3360x1782.png)
 
 Congratulations! Social connection with Microsoft Azure is now configured for your instance.
 
