fix: Missing alt on Notion

--- a/docs/authentication/social-connections/notion.mdx
+++ b/docs/authentication/social-connections/notion.mdx
@@ -26,15 +26,30 @@ For production instances, you will need to generate your own Client ID and Clien
 
 First, you need to create a new OAuth Notion app.
 
-![](/docs/images/authentication-providers/notion/8bfb8db037003ce2d8e3dc931cdde601d402703b-1148x1480.png)
+<Images
+  width={1148}
+  height={1480}
+  src="/docs/images/authentication-providers/notion/creating-a-new-integration.jpg"
+  alt="Creating a new integration"
+/>
 
 You need to set a name, a logo, and associate a Notion workspace with it. Make sure you are also requesting the user email address along with the other information and click **Submit**.
 
-![](/docs/images/authentication-providers/notion/038afa1d5298fc84d142aa5a9dd97317ddc245b4-1177x2165.png)
+<Images
+  width={1177}
+  height={2165}
+  src="/docs/images/authentication-providers/notion/configuring-integration.jpg"
+  alt="Configuring integration"
+/>
 
 Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Notion. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **Redirect URIs**, as shown below, after changing the integration type to **Public**. Fill any other information required from Notion and click Submit.
 
-![](/docs/images/authentication-providers/notion/ab4bc9eea6e1033cd0a30d539e196c30b07399ba-1173x766.png)
+<Images
+  width={1173}
+  height={766}
+  src="/docs/images/authentication-providers/notion/copying-values-from-notion-dashboard.jpg"
+  alt="Copying values from the Notion dashboard"
+/>
 
 Copy the **Client ID** and **Client secret** as shown in the above image. Go back to the Clerk Dashboard and paste them into the respective fields.
 
