--- a/docs/authentication/social-connections/slack.mdx
+++ b/docs/authentication/social-connections/slack.mdx
@@ -28,11 +28,21 @@ For production instances, you will need to generate your own Client ID and Clien
 
 First, you need to create a new OAuth Slack app. On the main [Slack apps page](https://api.slack.com/apps), click on **Create new app**. On the modal that pops up, choose **From scratch,** enter your application name and choose a Slack workspace to associate with it.
 
-![](/docs/images/authentication-providers/slack/94ec6d3046efef304c53501bf71eef26d019a9ef-1917x833.png)
+<Images
+  width={1917}
+  height={833}
+  src="/docs/images/authentication-providers/slack/creating-new-application.jpg"
+  alt="Creating a new application"
+/>
 
 Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Slack. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Navigate to **OAuth & Permissions > Redirect URLs** and paste the value to add a new record.
 
-![](/docs/images/authentication-providers/slack/60a1c0c6c305a9f3ee06e38e6315803c366060a4-1906x900.png)
+<Images
+  width={1906}
+  height={900}
+  src="/docs/images/authentication-providers/slack/copying-values-from-slack-dashboard.jpg"
+  alt="Copying values from the Slack dashboard"
+/>
 
 Copy the **Client ID** and **Client secret** as shown in the above image from the Basic Information menu of your app. Go back to the Clerk Dashboard and paste them into the respective fields.
 
