fix: Missing alt on Spotify

--- a/docs/authentication/social-connections/spotify.mdx
+++ b/docs/authentication/social-connections/spotify.mdx
@@ -26,11 +26,21 @@ First, you need to create a new OAuth Spotify app.
 
 You need to set an application name and description and click **Create**.
 
-![](/docs/images/authentication-providers/spotify/40307d1b86df4a302eab0b4838595625115a8a98-1891x831.png)
+<Images
+  width={1891}
+  height={831}
+  src="/docs/images/authentication-providers/spotify/creating-new-application.jpg"
+  alt="Creating a new application"
+/>
 
 Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Spotify. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **Redirect URIs** input as below and click Save.
 
-![](/docs/images/authentication-providers/spotify/e7e7b20ac200f2a6d8c7a14f37f0c34743c098b9-1891x831.png)
+<Images
+  width={1891}
+  height={831}
+  src="/docs/images/authentication-providers/spotify/e7e7b20ac200f2a6d8c7a14f37f0c34743c098b9-1891x831.png"
+  alt="Copying values from the Spotify dashboard"
+/>
 
 Copy the **Client ID** and **Client secret** as shown in the above image. Go back to the Clerk Dashboard and paste them into the respective fields.
 
