--- a/docs/authentication/social-connections/xero.mdx
+++ b/docs/authentication/social-connections/xero.mdx
@@ -26,11 +26,21 @@ For production instances, you will need to generate your own Client ID and Clien
 
 First, you need to create a new OAuth2 Xero app. Click New App and fill all the required information such as the App Name, your company URL, the redirect URL, choose Web App as integration type, and then click **Create app**.
 
-![](/docs/images/authentication-providers/xero/38ec7c59308b97f981fbab3e52f4b4cd7cda3e14-1904x981.png)
+<Images
+  width={1904}
+  height={981}
+  src="/docs/images/authentication-providers/xero/creating-new-application.jpg"
+  alt="Creating a new application"
+/>
 
 Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Xero. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
 
-![](/docs/images/authentication-providers/xero/8f68f7e5ae40bef5194e8814dfba1b73484c73d2-1909x824.png)
+<Images
+  width={1909}
+  height={824}
+  src="/docs/images/authentication-providers/xero/copying-values-from-xero-dashboard.jpg"
+  alt="Copying values from the Xero dashboard"
+/>
 
 Copy the **Client ID** and **Client secret** as shown in the above image. Go back to the Clerk Dashboard and paste them into the respective fields.
 
