fix: Missing file extension on Dropbox image

--- a/docs/authentication/social-connections/dropbox.mdx
+++ b/docs/authentication/social-connections/dropbox.mdx
@@ -40,7 +40,7 @@ Once all the above are complete, copy the **Client ID** and **Client Secret.** G
 <Images
   width={1902}
   height={1042}
-  src="/docs/images/authentication-providers/dropbox/copying-values-from-dropbox-dashboard"
+  src="/docs/images/authentication-providers/dropbox/copying-values-from-dropbox-dashboard.jpg"
   alt="Copying values from the Dropbox dashboard"
 />
 
