add page for update organization methods

--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -1,6 +1,6 @@
 ---
 title: <CreateOrganization />
-description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
+description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 ---
 
 # `<CreateOrganization />`
@@ -12,7 +12,7 @@ description: The `<CreateOrganization />` component is used to render an organiz
   src="/docs/images/ui-components/component-org_create.svg"
 />
 
-The `<CreateOrganization />` component is used to render an organization creatio UI that allows users to create brand new organizations within you application.
+The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 
 ## Usage
 
