--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -1,5 +1,112 @@
 ---
-sanity_slug: /docs/organizations/create-an-organization
+title: Create an organization
+description: Learn how to create an organization in your Clerk instance.
 ---
 
-# This is a stub
+# Create an organization
+
+Organizations are created by your end users. Whichever signed-in user creates an organization takes on the admin role for that organization.
+
+Clerk provides many methods to set up your organization creation flow. The [Organizations Backend API](https://clerk.com/docs/reference/backend-api/tag/Organizations) provides the [`createOrganization`](/docs/references/backend/organization/create-organization) method. This method can also be accessed through the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook or directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
+
+Clerk also provides the [`<CreateOrganization />`](/docs/components/organization/create-organization) component to handle organization creation for you.
+
+## Organization slug
+
+When creating an organization, you can specify an optional slug for the new organization. If provided, the organization slug can contain only lowercase alphanumeric characters (letters and digits) and the dash "-". Organization slugs must be unique for the instance.
+
+## Usage
+
+This example utilizes the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook to create an organization.
+
+<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+```jsx 
+// Form to create a new organization. The current user
+// will become the organization administrator.
+import { useOrganizationList } from "@clerk/nextjs";
+import { FormEventHandler, useState } from "react";
+
+export default function CreateOrganization() {
+  const { createOrganization } = useOrganizationList();
+  const [organizationName, setOrganizationName] = useState("");
+
+  const handleSubmit: FormEventHandler<HTMLFormElement> = (e) => {
+    e.preventDefault();
+    createOrganization({ name: organizationName });
+    setOrganizationName("");
+  };
+  
+  return (
+    <form onSubmit={handleSubmit}>
+      <input
+        type="text"
+        name="organizationName"
+        value={organizationName}
+        onChange={(e) => setOrganizationName(e.currentTarget.value)}
+      />
+      <button type="submit">Create organization</button>
+    </form>
+  );
+}
+```
+
+```jsx
+// Form to create a new organization. The current user
+// will become the organization administrator.
+import { useOrganizationList } from "@clerk/clerk-react";
+import { FormEventHandler, useState } from "react";
+
+export default function CreateOrganization() {
+  const { createOrganization } = useOrganizationList();
+  const [organizationName, setOrganizationName] = useState("");
+
+  const handleSubmit: FormEventHandler<HTMLFormElement> = (e) => {
+    e.preventDefault();
+    createOrganization({ name: organizationName });
+    setOrganizationName("");
+  };
+  
+  return (
+    <form onSubmit={handleSubmit}>
+      <input
+        type="text"
+        name="organizationName"
+        value={organizationName}
+        onChange={(e) => setOrganizationName(e.currentTarget.value)}
+      />
+      <button type="submit">Create organization</button>
+    </form>
+  );
+}
+```
+
+```js
+<!-- Form to create an organization -->
+<form id="new_organization">
+  <div>
+    <label>Name</label>
+    <br />
+    <input name="name" />
+  </div>
+  <button>Create organization</button>
+</form>
+
+<script>
+  const form = document.getElementById("new_organization");
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    const inputEl = form.getElementsByTagName("input")[0];
+    if (!inputEl) {
+      return;
+    }
+    try {
+      await window.Clerk.createOrganization({ name: inputEl.value });
+    } catch (err) {
+      console.error(err);
+    }
+  });
+</script>
+
+```
+
+
