fix broken links

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -35,7 +35,7 @@ Administrators can [invite other users to join the organization](/docs/organizat
 
 Administrators can [manage roles](/docs/organizations/managing-roles), such as revoking an invitation for a user that hasn't joined yet or removing a user who is already a member from the organization. When removing organization members or updating their role, there needs to be at least one administrator for the organization at all times.
 
-Administrators can also [update an organization name](/docs/organizations/update-organizations). 
+Administrators can also [update an organization name](/docs/organizations/updating-organizations). 
 
-Using the [Organizations Backend API](/docs/reference/backend-api/tag/Organizations), you can provide additional metadata for the organization and set custom attributes. Organizations support both private and public metadata. Private metadata can only be accessed from the Backend API. Public metadata can be accessed from the Backend API, and are read-only from the Frontend API. Learn more about organization metadata [here](/docs/organizations/metadata).
+Using the [Organizations Backend API](https://clerk.com/docs/reference/backend-api/tag/Organizations), you can provide additional metadata for the organization and set custom attributes. Organizations support both private and public metadata. Private metadata can only be accessed from the Backend API. Public metadata can be accessed from the Backend API, and are read-only from the Frontend API. Learn more about organization metadata [here](/docs/organizations/metadata).
 
