remove unnecessary copy about auth control

--- a/docs/users/web3.mdx
+++ b/docs/users/web3.mdx
@@ -19,9 +19,7 @@ Once you have a Clerk application set up in the dashboard, it's time to create a
 
 At this point, you should have a Next.js application integrated with Clerk and with Metamask authentication enabled. Run `npm run dev` and visit `localhost:3000`. If you followed the guide, all of the pages to your application should be protected, and you should see your sign-in page. 
 
-Your Clerk application will use the [Account Portal](/docs/account-portal/overview) pages out of the box. However, if you would like more control over your authentication flow, Clerk provides a set of [components](/docs/components/overview) that you can use. If the prebuilt components don't meet your specific needs, you can build fully [custom sign-up and sign-in flows](/docs/custom-flows/overview).
-
-After signing in with Metamask on your sign-in page, you'll be presented with the Next.js default start screen. Let's modify the start screen to display a user's primary Web3 address on the page.
+After signing in with Metamask, you'll be presented with the Next.js default start screen. Let's modify the start screen to display a user's primary Web3 address on the page.
 
 In this example, the [`User`](/docs/references/javascript/user/user) object for the current user can be accessed through the [`useUser()`](/docs/references/react/use-user) hook. The user's primary Web3 address can then be retrieved from the `User` object.
 
