DOCS-288 fix: Missing alt tags (#256)

--- a/docs/authentication/social-connections/dropbox.mdx
+++ b/docs/authentication/social-connections/dropbox.mdx
@@ -26,12 +26,22 @@ For production instances, you will need to generate your own Client ID and Clien
 
 First, you need to register a new OAuth Dropbox app at the [Dropbox App Console](https://www.dropbox.com/developers/apps).
 
-![](/docs/images/authentication-providers/dropbox/b03ad1395a499348c62cfb274f76ebb33674cba0-1905x836.png)
+<Images
+  width={1905}
+  height={836}
+  src="/docs/images/authentication-providers/dropbox/creating-new-application.jpg"
+  alt="Creating a new application"
+/>
 
 First you need to choose the API type, the App's type of access and to set a name for your new application. You also need to add the **OAuth Redirect URLs.** Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Dropbox. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **OAuth Redirect URIs** input and click create.
 
 Once all the above are complete, copy the **Client ID** and **Client Secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
 
-![](/docs/images/authentication-providers/dropbox/26785a8e4d30042fe88bedfc1fe31838511a3b83-1902x1042.png)
+<Images
+  width={1902}
+  height={1042}
+  src="/docs/images/authentication-providers/dropbox/copying-values-from-dropbox-dashboard.jpg"
+  alt="Copying values from the Dropbox dashboard"
+/>
 
 Don't forget to click **Apply** in the Clerk dashboard. Congratulations! Social connection with Dropbox is now configured for your instance.
