chore: update matcher to reflect source

--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -120,7 +120,7 @@ The `URL` mentioned above is the request url for server side usage or the curren
     });
 
     export const config = {
-      matcher: ["/((?!.+[\\w-\\$\\(\\)]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+      matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
     };
     ```
     </CodeBlockTabs>
