DOCS-289 Add Web3 Guide to Quickstarts (#269)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -48,7 +48,7 @@ The authentication strategy refers to whether your application will rely on pass
 Connected accounts are third-party sources used to authenticate your users.
 
 - [Social Login (OAuth)](/docs/authentication/social-connections/oauth)
-- [Web3 authentication](/docs/users/web3-wallets)
+- [Web3 authentication](/docs/users/web3)
 
 Once you've selected the first methods you would like to try, click **Create Application**. If you're not sure about what you want to use, don't worry. You can change any of these settings from the Clerk Dashboard later on.
 
