copy current docs, but add backend api reference

--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -7,17 +7,15 @@ description: Learn how to create an organization in your Clerk instance.
 
 Organizations are created by your end users. Whichever signed-in user creates an organization takes on the admin role for that organization.
 
-Clerk provides many methods to set up your organization creation flow. The [Organizations Backend API](https://clerk.com/docs/reference/backend-api/tag/Organizations) provides the [`createOrganization`](/docs/references/backend/organization/create-organization) method. This method can also be accessed through the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook or directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
+The only required parameter when creating a new organization is the organization name, which can be any string. In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook returns the `createOrganization` method. In ClerkJS, the same method is available directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
 
-Clerk also provides the [`<CreateOrganization />`](/docs/components/organization/create-organization) component to handle organization creation for you.
+The `createOrganization` method can also be accessed through the [Backend API](/docs/references/backend/organization/create-organization).
 
 ## Organization slug
 
 When creating an organization, you can specify an optional slug for the new organization. If provided, the organization slug can contain only lowercase alphanumeric characters (letters and digits) and the dash "-". Organization slugs must be unique for the instance.
 
 ## Usage
-
-This example utilizes the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook to create an organization.
 
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
 ```jsx 
