fix: Use pnpm add instead of pnpm i

--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -49,7 +49,7 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
   ```
 
   ```bash filename="terminal" copy
-  pnpm install @clerk/localizations
+  pnpm add @clerk/localizations
   ```
 </CodeBlockTabs>
 
