--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -28,7 +28,7 @@ Clerk offers [a set of themes that can be used with the `appearance` prop](/docs
   ```
 
   ```bash filename="terminal" copy
-  pnpm install @clerk/themes
+  pnpm add @clerk/themes
   ```
 </CodeBlockTabs>
 
