--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -29,7 +29,7 @@ Once you have a Expo application ready, you need to install Clerk's Expo SDK.
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/clerk-expo
+  pnpm add @clerk/clerk-expo
   ```
 </CodeBlockTabs>
 
@@ -474,7 +474,7 @@ You can use it as your client JWT storage by setting the `tokenCache` prop in yo
   ```
 
   ```bash filename="terminal" copy
-  pnpm install install expo-secure-store
+  pnpm add install expo-secure-store
   ```
 </CodeBlockTabs>
 
