--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -34,7 +34,7 @@ If you're looking for a more complete example, check out our [Fastify example ap
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/fastify
+  pnpm add @clerk/fastify
   ```
 </CodeBlockTabs>
 
@@ -67,8 +67,8 @@ This examples uses `dontenv` to load the environment variables. You can use any 
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/fastify
-  pnpm i -D types/dotenv
+  pnpm add @clerk/fastify
+  pnpm add -D types/dotenv
   ```
 </CodeBlockTabs>
 
