--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -27,7 +27,7 @@ Once you have a React application ready, you need to install Clerk's React SDK. 
   ```
 
   ```bash filename="terminal" copy
-  pnpm i gatsby-plugin-clerk
+  pnpm add gatsby-plugin-clerk
   ```
 </CodeBlockTabs>
 
