--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -37,7 +37,7 @@ At the root of your project, install the ClerkJS package using your package mana
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/clerk-js
+  pnpm add @clerk/clerk-js
   ```
 </CodeBlockTabs>
 
@@ -79,7 +79,7 @@ CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
 To use the ClerkJS package, you'll need to initialize the Clerk class with your frontend API URL and publishable key.
 
 <CodeBlockTabs options={['npm Package', 'script Tag']}>
-```js copy filename="index.js" 
+```js copy filename="index.js"
 import Clerk from '@clerk/clerk-js';
 
 const clerkFrontendApi = `pk_{{pub_key}}`;
