--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -22,7 +22,7 @@ Once you have a Remix application ready, you need to install Clerk's Remix SDK. 
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/remix
+  pnpm add @clerk/remix
   ```
 </CodeBlockTabs>
 
@@ -216,7 +216,7 @@ export const ErrorBoundary = V2_ClerkErrorBoundary(YourBoundary);
 
 #### Catch Boundary
 
-If you have not set the `v2_errorBoundary` future flag to `true`, use the `ClerkCatchBoundary` instead. 
+If you have not set the `v2_errorBoundary` future flag to `true`, use the `ClerkCatchBoundary` instead.
 
 ```ts filename="app/root.tsx" copy
 export const CatchBoundary = ClerkCatchBoundary();
