--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -29,7 +29,7 @@ Clerk's Next.js SDK gives you access to prebuilt components and hooks, as well a
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/nextjs
+  pnpm add @clerk/nextjs
   ```
 </CodeBlockTabs>
 
