--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -30,7 +30,7 @@ Once you have a React application ready, you need to install Clerk's React SDK. 
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/clerk-react
+  pnpm add @clerk/clerk-react
   ```
 </CodeBlockTabs>
 
@@ -114,7 +114,7 @@ export default App;
 ```
 
 <Callout type="info" emoji="🎉">
- At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box.  
+ At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box.
 Start your React application via `npm run start`, visit `http://localhost:3000`, and sign up to get access to your application.
 </Callout>
 
