--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -29,7 +29,7 @@ There are two ways you can include ClerkJS in your project. You can either [impo
   ```
 
   ```bash filename="terminal" copy
-  pnpm i @clerk/clerk-js
+  pnpm add @clerk/clerk-js
   ```
 </CodeBlockTabs>
 
