--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -77,7 +77,7 @@ yarn add svix
 ```
 
 ```bash filename="terminal" copy
-pnpm i svix
+pnpm add svix
 ```
 
 </CodeBlockTabs>
@@ -144,7 +144,7 @@ yarn add svix
 ```
 
 ```bash filename="terminal" copy
-pnpm i svix
+pnpm add svix
 ```
 
 </CodeBlockTabs>
@@ -230,7 +230,7 @@ yarn add svix
 ```
 
 ```bash filename="terminal" copy
-pnpm i svix
+pnpm add svix
 ```
 
 </CodeBlockTabs>
