update: Improve usage examples of <OrganizationList/>

--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -19,26 +19,30 @@ The `<OrganizationList />` component is used to display organization related mem
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/organization-list/[[...organization-list]]/page.[jsx/tsx]"
+      ```jsx copy filename="/app/discover/page.[jsx/tsx]"
       import { OrganizationList } from "@clerk/nextjs";
 
       export default function OrganizationListPage() {
         return (
-          <div>
-            <OrganizationList />
-          </div>
+            <OrganizationList
+                afterCreateOrganizationUrl='/organization/:slug'
+                afterSelectPersonalUrl='/user/:id'
+                afterSelectOrganizationUrl='/organization/:slug'
+            />
         );
       }
       ```
 
-      ```jsx copy filename="/pages/organization-list/[[...index]].[jsx/tsx]"
+      ```jsx copy filename="/pages/discover.[jsx/tsx]"
       import { OrganizationList } from "@clerk/nextjs";
 
       export default function OrganizationListPage() {
         return (
-          <div>
-            <OrganizationList />
-          </div>
+            <OrganizationList
+                afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+                afterSelectPersonalUrl={user => `/user/${user.id}`}
+                afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+            />
         );
       }
       ```
@@ -46,34 +50,52 @@ The `<OrganizationList />` component is used to display organization related mem
   </Tab>
 
   <Tab>
-    ```jsx copy filename="organization-switcher.tsx"
+    ```jsx copy filename="discover.tsx"
     import { OrganizationList } from "@clerk/clerk-react";
 
     export default function OrganizationListPage() {
       return (
-        <div>
-          <OrganizationList />
-        </div>
+          <OrganizationList
+              afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+              afterSelectPersonalUrl={user => `/user/${user.id}`}
+              afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+          />
       );
     }
     ```
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/pages/organization-list/$.tsx"
+    ```jsx copy filename="/route/discover.tsx"
     import { OrganizationList } from "@clerk/remix";
 
     export default function OrganizationListPage() {
       return (
-        <div>
-          <OrganizationList />
-        </div>
+          <OrganizationList
+              afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+              afterSelectPersonalUrl={user => `/user/${user.id}`}
+              afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+          />
       );
     }
     ```
   </Tab>
 </Tabs>
 
+### Force Organizations
+
+For specific applications, we want to prohibit people from using their personal accounts as they need to be part of an organization.
+Use <code>{"<OrganizationList/>"}</code> with <code>{"hidePeronsal"}</code> in order to guide your user to join or create an organization in order to continue.
+```tsx copy filename="organization-portal.tsx"
+export default function OrganizationListPage() {
+  return (
+    <OrganizationList
+        hidePersonal={true}
+        {...}
+    />
+  );
+};
+```
 
 ## Props
 
