--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -7,7 +7,7 @@ description: Learn how to create an organization in your Clerk instance.
 
 Organizations are created by your end users. Whichever signed-in user creates an organization takes on the admin role for that organization.
 
-The only required parameter when creating a new organization is the organization name, which can be any string. In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook returns the `createOrganization` method. In ClerkJS, the same method is available directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
+The only required parameter when creating a new organization is the organization name, which can be any string. In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook returns the `createOrganization` method. In JavaScript applications, the same method is available directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
 
 The `createOrganization` method can also be accessed through the [Backend API](/docs/references/backend/organization/create-organization).
 
