add TODO comments

--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -17,6 +17,8 @@ When creating an organization, you can specify an optional slug for the new orga
 
 ## Usage
 
+{/* TO-DO: Update and validate these code examples. */}
+
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
 ```jsx 
 // Form to create a new organization. The current user
