add TODO comments

--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -17,7 +17,7 @@ When creating an organization, you can specify an optional slug for the new orga
 
 ## Usage
 
-{/* TO-DO: Update and validate these code examples. */}
+{/* TO-DO (DOCS-316): Update and validate these code examples. */}
 
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
 ```jsx 
