--- a/docs/organizations/updating-organizations.mdx
+++ b/docs/organizations/updating-organizations.mdx
@@ -15,7 +15,7 @@ You can also use the `updateOrganization` method, which can be accessed from the
 
 This example uses the [`useOrganization()`](/docs/references/react/use-organization) hook to update the organization name.
 
-{/* TO-DO: Update and validate these code examples. */}
+{/* TO-DO (DOCS-316): Update and validate these code examples. */}
 
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
 ```jsx
