--- a/docs/organizations/inviting-users.mdx
+++ b/docs/organizations/inviting-users.mdx
@@ -13,6 +13,8 @@ Administrators are also able to revoke organization invitations for users that h
 
 ## Usage
 
+{/* TO-DO (DOCS-316): Add examples for React and JavaScript. Update and validate these code examples. */}
+
 An example implementation in Next.js for inviting users and revoking pending invitations:
 
 ```jsx
