add TODO comments

--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -7,9 +7,9 @@ description: Learn how to manage member roles in an organization.
 
 Organization administrators have the ability to manage the member roles within an organization.
 
-{/* TO-DO: Update and validate these examples. */}
-
 The [`useOrganization()`](/docs/references/react/use-organization) hook can be used to retrieve the list of members for an organization. 
+
+{/* TODO (DOCS-316): Update and validate these examples. */}
 
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
 ```tsx filename="pages/organizations/[id].ts" copy
