add viewing memberships page; add copy about membership management

--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -5,9 +5,15 @@ description: Learn how to manage member roles in an organization.
 
 # Manage member roles in an organization
 
-Organization administrators have the ability to manage the member roles within an organization.
+Organization administrators have the ability to manage the member roles within an organization. Admins can change a member's role, remove them from an organization, and revoke organization invitations.
 
-The [`useOrganization()`](/docs/references/react/use-organization) hook can be used to retrieve the list of members for an organization. 
+The [`useOrganization()`](/docs/references/react/use-organization) hook can be used to retrieve the current user's membership or the list of members for an organization. The [`destroy`](/docs/references/javascript/organization-membership#destroy) and [`update`](/docs/references/javascript/organization-membership#update) methods can be called on the membership object to remove a member or change their role.
+
+The `useOrganizationList()` hook can also be used to retrieve the list of invitations for an organization. The [`revoke`](/docs/references/javascript/organization-invitation#revoke) method can be called on the invitation object to revoke the invitation.
+
+Methods for [changing a member's role](/docs/references/backend/organization/update-organization-membership), [removing a member](/docs/references/backend/organization/delete-organization-membership), and [revoking an invitation](/docs/references/backend/organization/revoke-organization-invitation) are also available on the [Backend API](/docs/references/backend/overview). 
+
+## Usage
 
 {/* TODO (DOCS-316): Update and validate these examples. */}
 
@@ -201,8 +207,8 @@ import { useState, useEffect } from "react";
 import { useOrganization } from "@clerk/clerk-react";
 import type { OrganizationMembershipResource } from "@clerk/types";
 
-// View and manage active organization members, along with any
-// pending invitations.
+// View and manage active organization members,
+// along with any pending invitations.
 // Invite new members.
 export default function Organization() {
   const {
