--- a/docs/organizations/viewing-memberships.mdx
+++ b/docs/organizations/viewing-memberships.mdx
@@ -3,13 +3,15 @@ title: View current organization memberships
 description: Learn how to view organization memberships for the currently signed-in user.
 ---
 
-# View current memberships
+# View current organization memberships
 
 Clerk provides the ability for the currently signed-in user to view all the organizations they are members of.
 
 In React and Next.js applications, the `useOrganizationList()` hook can be used to return the list of invitations or memberships for the currently active user. In JavaScript applications, the `getOrganizationMemberships()` method can be used to return the list of organization memberships.
 
 You can also use the `getOrganizationMemberships()` method, which can be accessed through the [Backend API](/docs/references/backend/organization/get-organization-membership-list).
+
+## Usage
 
 {/* TODO (DOCS-316): Update and validate these code examples. */}
 
