update hosted pages to now reference account portal

--- a/docs/account-portal/direct-links.mdx
+++ b/docs/account-portal/direct-links.mdx
@@ -1,5 +1,5 @@
 ---
-title: Direct links | Account Portal
+title: Direct links
 description: Learn how to share direct links to your Account Portal pages, and how to set up fallback redirects.
 ---
 
