--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -11,7 +11,7 @@ Clerk provides a large selection of options for managing your user's sign-in exp
   For more information about the steps required for a user to sign in, see the [sign-in flow documentation](/docs/custom-flows/overview#sign-in-flow).
 </Callout>
 
-You can create your sign-in flow with Clerk's [hosted pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview). If you need more control over your flow, you can build your own by using [React hooks](/docs/custom-flows/use-sign-up) or by using the methods of the [`SignIn` object](/docs/references/javascript/sign-in/sign-in).
+You can create your sign-in flow with Clerk's [Account Portal pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview). If you need more control over your flow, you can build your own by using [React hooks](/docs/custom-flows/use-sign-up) or by using the methods of the [`SignIn` object](/docs/references/javascript/sign-in/sign-in).
 
 ## Getting started
 
