--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -131,7 +131,7 @@ ReactDOM.render(
       cells: [
         <code>appearance?</code>,
         <code>object</code>,
-        <>Optional object to customize your Components. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+        <>Optional object to customize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
       ],
     },
     {
