--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -1,5 +1,5 @@
 ---
-title: Customizing your redirects | Account Portal
+title: Customizing your Account Portal redirect
 description:  Customize where your users are redirected to after they sign in or sign up.
 ---
 
