--- a/docs/account-portal/getting-started.mdx
+++ b/docs/account-portal/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting started | Account Portal
+title: Getting started with the Account Portal
 description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
 ---
 
