--- a/docs/organizations/viewing-memberships.mdx
+++ b/docs/organizations/viewing-memberships.mdx
@@ -7,9 +7,10 @@ description: Learn how to view organization memberships for the currently signed
 
 Clerk provides the ability for the currently signed-in user to view all the organizations they are members of.
 
-In React and Next.js applications, the `useOrganizationList()` hook can be used to return the list of invitations or memberships for the currently active user. In JavaScript applications, the `getOrganizationMemberships()` method can be used to return the list of organization memberships.
+In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook can be used to return the list of invitations or memberships for the currently active user. In JavaScript applications, the [`getOrganizationMemberships()`](/docs/references/javascript/clerk/organization-methods#get-organization-memberships) method is used to retrieve the list of organizations the current user is a part of and can be accessed through the [`Clerk` object](/docs/references/javascript/clerk).
 
-You can also use the `getOrganizationMemberships()` method, which can be accessed through the [Backend API](/docs/references/backend/organization/get-organization-membership-list).
+{/* Instead of viewing the current users memberships, you can also view all of the memberships for an organization.
+You can use the `getOrganizationMembershipList()` method to retrieve a list of memberships for an organization by passing in an organization ID. This method can be accessed through the [Backend API](/docs/references/backend/organization/get-organization-membership-list). */}
 
 ## Usage
 
@@ -109,9 +110,12 @@ export default JoinedOrganizationList;
   const list = document.getElementById("organizations_list");
   try {
     const organizationMemberships = await window.Clerk.getOrganizationMemberships();
+
     organizationMemberships.map((membership) => {
       const li = document.createElement("li");
+
       li.textContent = `${membership.organization.name} - ${membership.role}`;
+
       list.appendChild(li);
     });
   } catch (err) {
