fix: package name

--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -62,7 +62,7 @@ export async function POST() {
 }
 ```
 ```ts copy filename="private.ts"
-import { clerkClient } from "@clerk/clerk-node-sdk";
+import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateStripe', (req, res) => {
 
