--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -1,5 +1,111 @@
 ---
-sanity_slug: /docs/organizations/create-an-organization
+title: Create an organization
+description: Learn how to create an organization in your Clerk instance.
 ---
 
-# This is a stub
+# Create an organization
+
+Organizations are created by your end users. Whichever signed-in user creates an organization takes on the admin role for that organization.
+
+The only required parameter when creating a new organization is the organization name, which can be any string. In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook returns the `createOrganization` method. In JavaScript applications, the same method is available directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
+
+The `createOrganization` method can also be accessed through the [Backend API](/docs/references/backend/organization/create-organization).
+
+## Organization slug
+
+When creating an organization, you can specify an optional slug for the new organization. If provided, the organization slug can contain only lowercase alphanumeric characters (letters and digits) and the dash "-". Organization slugs must be unique for the instance.
+
+## Usage
+
+{/* TO-DO (DOCS-316): Update and validate these code examples. */}
+
+<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+```jsx 
+// Form to create a new organization. The current user
+// will become the organization administrator.
+import { useOrganizationList } from "@clerk/nextjs";
+import { FormEventHandler, useState } from "react";
+
+export default function CreateOrganization() {
+  const { createOrganization } = useOrganizationList();
+  const [organizationName, setOrganizationName] = useState("");
+
+  const handleSubmit: FormEventHandler<HTMLFormElement> = (e) => {
+    e.preventDefault();
+    createOrganization({ name: organizationName });
+    setOrganizationName("");
+  };
+  
+  return (
+    <form onSubmit={handleSubmit}>
+      <input
+        type="text"
+        name="organizationName"
+        value={organizationName}
+        onChange={(e) => setOrganizationName(e.currentTarget.value)}
+      />
+      <button type="submit">Create organization</button>
+    </form>
+  );
+}
+```
+
+```jsx
+// Form to create a new organization. The current user
+// will become the organization administrator.
+import { useOrganizationList } from "@clerk/clerk-react";
+import { FormEventHandler, useState } from "react";
+
+export default function CreateOrganization() {
+  const { createOrganization } = useOrganizationList();
+  const [organizationName, setOrganizationName] = useState("");
+
+  const handleSubmit: FormEventHandler<HTMLFormElement> = (e) => {
+    e.preventDefault();
+    createOrganization({ name: organizationName });
+    setOrganizationName("");
+  };
+  
+  return (
+    <form onSubmit={handleSubmit}>
+      <input
+        type="text"
+        name="organizationName"
+        value={organizationName}
+        onChange={(e) => setOrganizationName(e.currentTarget.value)}
+      />
+      <button type="submit">Create organization</button>
+    </form>
+  );
+}
+```
+
+```js
+<!-- Form to create an organization -->
+<form id="new_organization">
+  <div>
+    <label>Name</label>
+    <br />
+    <input name="name" />
+  </div>
+  <button>Create organization</button>
+</form>
+
+<script>
+  const form = document.getElementById("new_organization");
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    const inputEl = form.getElementsByTagName("input")[0];
+    if (!inputEl) {
+      return;
+    }
+    try {
+      await window.Clerk.createOrganization({ name: inputEl.value });
+    } catch (err) {
+      console.error(err);
+    }
+  });
+</script>
+
+```
+</CodeBlockTabs>
