--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -24,6 +24,13 @@ However, if you require more precise customization or prefer having your applica
 
 The Account Portal utilizes our [prebuilt Clerk components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers. 
 
+<Images 
+  width={1200}
+  height={350}
+  src="/docs/images/account-portal/account_portal_how_it_works.png"
+  alt="Account Portal"
+/>
+
 After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application along with the required authentication context. This way, users are automatically redirected to and from your application for a seamless experience. 
 
 
