fix nodejs package name

--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -51,7 +51,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 ```
 
 ```ts copy filename="private.ts"
-import { clerk } from "@clerk/clerk-node-sdk";
+import { clerk } from "@clerk/clerk-sdk-node";
 
 app.post('/deleteUser', (req, res) => {
   const userId = req.body.userId;
