--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -142,7 +142,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 ```
 
 ```ts copy filename="private.ts"
-import { clerkClient } from "@clerk/clerk-node-sdk";
+import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateStripe', (req, res) => {
   const { userId } = await req.body.json();
@@ -221,7 +221,7 @@ export async function POST() {
 }
 ```
 ```ts copy filename="public.ts"
-import { clerkClient } from "@clerk/clerk-node-sdk";
+import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateRole', (req, res) => {
 
@@ -327,7 +327,7 @@ export async function POST() {
 }
 ```
 ```ts copy filename="private.ts"
-import { clerkClient } from "@clerk/clerk-node-sdk";
+import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateStripe', (req, res) => {
 
