apply bryce edits

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -47,7 +47,7 @@ Add the [`<ClerkProvider />`](/docs/components/clerk-provider#clerk-provider) wr
 <Callout type="info">
   <p>The `<ClerkProvider />` component needs to access [headers](https://nextjs.org/docs/app/api-reference/functions/headers) to authenticate correctly. This means anything wrapped by the provider will be opted into [dynamic rendering](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering) at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are <em>not</em> wrapped by `<ClerkProvider />`.</p>
   
-  <p>This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap page groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if you have a set of landing/marketing pages, and an app that requires login that live within the same project, wrapping just the app layout group with the provider and keeping the marketing pages in a separate layout group would allow the marketing pages to continue to be static-optimized.</p>
+  <p>This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap route groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if you have a set of landing/marketing pages, and a dashboard that requires login that live within the same project, create separate `(marketing)` and `(dashboard)` route groups. Adding `<ClerkProvider />` to the `(dashboard)/layout.jsx` layout file will ensure that only those routes are opted into dynamic rendering, allowing the marketing routes to be statically optimized.</p>
 </Callout>
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
