feat(nextjs): Update middleware docs with updated matcher (#274)

--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -120,7 +120,7 @@ The `URL` mentioned above is the request url for server side usage or the curren
     });
 
     export const config = {
-      matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api)(.*)"],
+      matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
     };
     ```
     </CodeBlockTabs>
